--- a/otel-collector-config.yaml
+++ b/otel-collector-config.yaml
@@ -14,6 +14,11 @@ exporters:
     endpoint: jaeger:4317
     tls:
       insecure: true
+  prometheus:
+    endpoint: "0.0.0.0:8889"
+    namespace: "demo"
+    const_labels:
+      service: "http-service"
   debug:
     verbosity: detailed
     sampling_initial: 5
@@ -25,3 +30,7 @@ service:
       receivers: [otlp]
       processors: [batch]
       exporters: [otlp, debug]
+    metrics:
+      receivers: [otlp]
+      processors: [batch]
+      exporters: [prometheus, debug]
