--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,36 @@
-version: '3.8'
-
 services:
   jaeger:
-    image: jaegertracing/all-in-one:1.65.0
+    image: jaegertracing/jaeger:2.2.0
+    volumes:
+      - "./config/jaeger-ui.json:/etc/jaeger/jaeger-ui.json"
+      - "./config/config-spm.yaml:/etc/jaeger/config.yml"
+    command: ["--config", "/etc/jaeger/config.yml"]
     ports:
       - "16686:16686"  # Web UI
       - "4317:4317"    # OTLP gRPC
       - "4318:4318"    # OTLP HTTP
+      - "14269:14269"  # Admin port
     environment:
       - COLLECTOR_OTLP_ENABLED=true
+      - METRICS_STORAGE_TYPE=prometheus
+      - PROMETHEUS_SERVER_URL=http://prometheus:9090
+      - PROMETHEUS_QUERY_SUPPORT_SPANMETRICS=true
+      - METRICS_STORAGE_SPANMETRICS_QUERIES_ENABLED=true
+      - QUERY_UI_CONFIG={"monitor":{"menuEnabled":true}}
     networks:
       - monitoring
+    depends_on:
+      - prometheus
 
   otel-collector:
-    image: otel/opentelemetry-collector:0.118.0
-    command: ["--config=/etc/otel-collector-config.yaml"]
+    image: otel/opentelemetry-collector-contrib:0.96.0
     volumes:
-      - ./otel-collector-config.yaml:/etc/otel-collector-config.yaml
+      - ./config/otel-collector-config.yaml:/etc/otel-collector-config.yaml
+    command: ["--config=/etc/otel-collector-config.yaml"]
     ports:
-      - "8888:4318"   # OTLP HTTP receiver (mapped to different port to avoid conflict)
+      - "8888:4318"   # OTLP HTTP receiver
       - "13133:13133" # Health check
+      - "8889:8889"   # Prometheus exporter
     depends_on:
       - jaeger
     networks:
@@ -29,12 +40,17 @@ services:
     image: prom/prometheus:v3.1.0
     command:
       - '--config.file=/etc/prometheus/prometheus.yml'
+      - '--storage.tsdb.retention.time=24h'
     volumes:
-      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+      - ./config/prometheus.yml:/etc/prometheus/prometheus.yml
+      - prometheus-data:/prometheus
     ports:
       - "9090:9090"
     networks:
       - monitoring
+
+volumes:
+  prometheus-data:
 
 networks:
   monitoring:
