--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "opentelemetry-sample",
   "version": "1.0.0",
-  "main": "app.js",
+  "main": "src/app.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node src/app.js"
   },
   "keywords": [
     "OpenTelemetry",
